[gd_scene load_steps=20 format=3 uid="uid://bafpj3jqosje7"]

[ext_resource type="Script" uid="uid://ci7o42ib2j32x" path="res://source/editor/interfaces/provinces/interface_province_edit.gd" id="1_qx7cx"]
[ext_resource type="StyleBox" uid="uid://bmln1elnj0h8" path="res://resources/style_blueish.tres" id="2_t401f"]
[ext_resource type="Script" uid="uid://bxnkmbnd8epei" path="res://source/editor/interfaces/provinces/province_preview.gd" id="3_e7r6f"]
[ext_resource type="PackedScene" uid="uid://cintikjibl1vr" path="res://source/utils/property_tree/nodes/item_void.tscn" id="4_rht4m"]
[ext_resource type="Script" uid="uid://dvo2mdraodovy" path="res://source/utils/property_tree/items/property_tree_item.gd" id="5_u2f1k"]
[ext_resource type="Script" uid="uid://bk5w8y642cp21" path="res://source/utils/property_tree/items/item_string.gd" id="6_e7r6f"]
[ext_resource type="Script" uid="uid://ck4addyc1ep24" path="res://source/utils/property_tree/items/item_int.gd" id="7_0k6te"]
[ext_resource type="Script" uid="uid://dmvvf6byo3wpw" path="res://source/utils/property_tree/items/item_bool.gd" id="7_e7r6f"]
[ext_resource type="Script" uid="uid://eb11a73aevp7" path="res://source/utils/property_tree/items/item_country.gd" id="7_rtye8"]

[sub_resource type="Resource" id="Resource_0k6te"]
script = ExtResource("6_e7r6f")
text = "Name:"
metadata/_custom_type_script = "uid://bk5w8y642cp21"

[sub_resource type="Resource" id="Resource_4jecb"]
script = ExtResource("5_u2f1k")
text = "Position: drag this province to move it"
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[sub_resource type="Resource" id="Resource_rtye8"]
script = ExtResource("5_u2f1k")
text = "Right click on a province to toggle it"
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[sub_resource type="Resource" id="Resource_qx7cx"]
script = ExtResource("5_u2f1k")
text = "Double right click on this province to reset"
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[sub_resource type="Resource" id="Resource_vhvwt"]
script = ExtResource("5_u2f1k")
text = "Adjacencies:"
child_items = Array[ExtResource("5_u2f1k")]([SubResource("Resource_rtye8"), SubResource("Resource_qx7cx")])
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[sub_resource type="Resource" id="Resource_d51jc"]
script = ExtResource("7_rtye8")
text = "Controlled by:"
metadata/_custom_type_script = "uid://eb11a73aevp7"

[sub_resource type="Resource" id="Resource_50ug6"]
script = ExtResource("7_0k6te")
value = 0
has_minimum = true
minimum = 0
has_maximum = false
maximum = 0
text = "Population:"
metadata/_custom_type_script = "uid://ck4addyc1ep24"

[sub_resource type="Resource" id="Resource_6kqa5"]
script = ExtResource("7_0k6te")
value = 0
has_minimum = false
minimum = 0
has_maximum = false
maximum = 0
text = "Money income per turn:"
metadata/_custom_type_script = "uid://ck4addyc1ep24"

[sub_resource type="Resource" id="Resource_wrmpg"]
script = ExtResource("7_e7r6f")
text = "Has fortress:"
metadata/_custom_type_script = "uid://dmvvf6byo3wpw"

[sub_resource type="Resource" id="Resource_e7r6f"]
script = ExtResource("5_u2f1k")
text = "Settings:"
child_items = Array[ExtResource("5_u2f1k")]([SubResource("Resource_0k6te"), SubResource("Resource_4jecb"), SubResource("Resource_vhvwt"), SubResource("Resource_d51jc"), SubResource("Resource_50ug6"), SubResource("Resource_6kqa5"), SubResource("Resource_wrmpg")])
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[node name="InterfaceProvinceEdit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qx7cx")

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(96, 32)
layout_mode = 1
offset_right = 64.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("2_t401f")
text = "<- Back"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
offset_left = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("2_t401f")
text = "Delete"

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProvincePreview" type="Control" parent="Control"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_e7r6f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" parent="VBoxContainer" instance=ExtResource("4_rht4m")]
unique_name_in_owner = true
layout_mode = 2
item = SubResource("Resource_e7r6f")

[node name="ShortcutsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 12
text = "Keyboard shortcuts:
Del -> Delete
Ctrl+D -> Duplicate"
vertical_alignment = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
